# pipewire-sdbus-qt

./: CMakeLists.txt
src/: CMakeLists.txt  DBusDecls.hpp  Helpers.cpp  Helpers.hpp  PortalRequests.cpp  PortalRequests.hpp  Request.cpp  Request.hpp  RequestWrapper.cpp  RequestWrapper.hpp  ScreenCast.cpp  ScreenCast.hpp  ScreenCastWrapper.cpp  ScreenCastWrapper.hpp  Streaming.hpp  StreamingWindow.cpp  StreamingWindow.qml  example_gst.cpp  example_gui.cpp  example_pipewire.cpp  main.cpp
src/gst++/: elements.hpp  error.hpp
src/gui/: CMakeLists.txt  StreamingWindow.cpp  StreamingWindow.hpp  StreamingWindow.qml  example.qrc
src/helpers/: CMakeLists.txt  Singleton.hpp  Strings.cpp
src/portal/: Portal.cpp  Portal.hpp  Request.hpp  ScreenCast.hpp
src/screencast/: CMakeLists.txt  DBusDecls.hpp  PortalRequests.hpp  Request.cpp  ScreenCast.hpp  Streaming.hpp
src/screencast/portal/: org.freedesktop.portal.Request.xml
src/video/: CMakeLists.txt  PipeWire.cpp  PipeWire.hpp
